// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Push rendering works 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#24292f",
      "fallback": "[github-slack/app] <https://github.com/github-slack/app/compare/9e70dd3456ba...c8517a6aa42a|11 new commits> pushed to \`master\`",
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "*<https://github.com/github-slack/app/compare/9e70dd3456ba...c8517a6aa42a|11 new commits> pushed to \`master\`*
<https://github.com/github-slack/app/commit/70a7498e9ca8ab3daa7b3c4ed3963d2968a22719|\`70a7498e\`> - Bump probot version
<https://github.com/github-slack/app/commit/d2f6f8b15b077d092c1fa16c41f7b191fa53b2d7|\`d2f6f8b1\`> - Merge branch 'fix-sender-bug' into deployments
<https://github.com/github-slack/app/commit/a8cfa539aee3f9b20dd905027d4206cdf9118b8d|\`a8cfa539\`> - Add deployment rendering
<https://github.com/github-slack/app/commit/e9ac9181c32303ba88e9e75fd44120412c7c5b1f|\`e9ac9181\`> - Implement deployment statuses e2e
<https://github.com/github-slack/app/commit/ee8ca970f0b55d60a3946b7f9a4fedd9df8e9c5a|\`ee8ca970\`> - Merge branch 'master' into deployments
<https://github.com/github-slack/app/commit/f176b81ed8c30d00bb48b07d4caf7ce530f077f9|\`f176b81e\`> - Merge branch 'master' into deployments
<https://github.com/github-slack/app/commit/97fe8149e24035175df8d3697396ce213f0077b2|\`97fe8149\`> - Merge branch 'master' into deployments
<https://github.com/github-slack/app/commit/a4ac5584497c4553ea815a9ad92d8410382a0709|\`a4ac5584\`> - Improve deployment status rendering
<https://github.com/github-slack/app/commit/35c75f7e1592e3986bf1d273767c4cbf0bb4a5b9|\`35c75f7e\`> - Merge branch 'deployments' of github.com:github-slack/wilhelm-test into deployments
<https://github.com/github-slack/app/commit/477b5f3879ceca2435249bb309565f6c6602d158|\`477b5f38\`> - Remove comments
<https://github.com/github-slack/app/commit/c8517a6aa42a568bc1a0be1febc1e1c819932ba6|\`c8517a6a\`> - Merge pull request #88 from github-slack/deployments",
    },
  ],
}
`;

exports[`Push rendering works for 1 commit 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#24292f",
      "fallback": "[github-slack/app] <https://github.com/github-slack/app/compare/9e70dd3456ba...c8517a6aa42a|1 new commit> pushed to \`master\`",
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "*<https://github.com/github-slack/app/compare/9e70dd3456ba...c8517a6aa42a|1 new commit> pushed to \`master\`*
<https://github.com/github-slack/app/commit/70a7498e9ca8ab3daa7b3c4ed3963d2968a22719|\`70a7498e\`> - Bump probot version",
    },
  ],
}
`;

exports[`Push rendering works works for force-pushes 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#24292f",
      "fallback": "[github-slack/app] <https://github.com/github-slack/app/compare/9e70dd3456ba...c8517a6aa42a|11 new commits> force-pushed to \`master\`",
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "*<https://github.com/github-slack/app/compare/9e70dd3456ba...c8517a6aa42a|11 new commits> force-pushed to \`master\`*
<https://github.com/github-slack/app/commit/70a7498e9ca8ab3daa7b3c4ed3963d2968a22719|\`70a7498e\`> - Bump probot version
<https://github.com/github-slack/app/commit/d2f6f8b15b077d092c1fa16c41f7b191fa53b2d7|\`d2f6f8b1\`> - Merge branch 'fix-sender-bug' into deployments
<https://github.com/github-slack/app/commit/a8cfa539aee3f9b20dd905027d4206cdf9118b8d|\`a8cfa539\`> - Add deployment rendering
<https://github.com/github-slack/app/commit/e9ac9181c32303ba88e9e75fd44120412c7c5b1f|\`e9ac9181\`> - Implement deployment statuses e2e
<https://github.com/github-slack/app/commit/ee8ca970f0b55d60a3946b7f9a4fedd9df8e9c5a|\`ee8ca970\`> - Merge branch 'master' into deployments
<https://github.com/github-slack/app/commit/f176b81ed8c30d00bb48b07d4caf7ce530f077f9|\`f176b81e\`> - Merge branch 'master' into deployments
<https://github.com/github-slack/app/commit/97fe8149e24035175df8d3697396ce213f0077b2|\`97fe8149\`> - Merge branch 'master' into deployments
<https://github.com/github-slack/app/commit/a4ac5584497c4553ea815a9ad92d8410382a0709|\`a4ac5584\`> - Improve deployment status rendering
<https://github.com/github-slack/app/commit/35c75f7e1592e3986bf1d273767c4cbf0bb4a5b9|\`35c75f7e\`> - Merge branch 'deployments' of github.com:github-slack/wilhelm-test into deployments
<https://github.com/github-slack/app/commit/477b5f3879ceca2435249bb309565f6c6602d158|\`477b5f38\`> - Remove comments
<https://github.com/github-slack/app/commit/c8517a6aa42a568bc1a0be1febc1e1c819932ba6|\`c8517a6a\`> - Merge pull request #88 from github-slack/deployments",
    },
  ],
}
`;
